Hinzufügen einer fehlenden Referenz

--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -4,7 +4,7 @@
 \subsection{Graph-Isomorphie}
 Zwei Graphen $G$ und $H$ sind isomorph, kurz $G\simeq H$, wenn es eine bijektive Abbildung $\phi$ der Knoten von $G$ auf $H$ gibt, sodass die Adjazenz aller Knoten untereinander erhalten bleibt.
 Es gilt also: $(u,v)\in E_G\Leftrightarrow (\phi (u),\phi (v))\in E_H$ für alle $u,v\in V_G$.
-Eine so definierte Abbildung $\phi$ wird \emph{Isomorphismus} genannt.
+Eine so definierte Abbildung $\phi$ wird \emph{Isomorphismus} genannt, vgl. \cite{MCKAY201494}.
 
 Es wurde gezeigt, dass das Graph-Isomorphie-Problem in $NP$ liegt, die $NP$-Vollständigkeit ist allerdings noch unklar.
 Es konnte außerdem noch kein Algorithmus gefunden werden, welcher das Problem in polynomieller Zeit löst, jedoch wird davon ausgegangen, dass es nicht $NP$-vollständig ist.
