Ändern aller Literatureinträge zu inproceedings für einen einheitlichen Stil

--- a/literatur.bib
+++ b/literatur.bib
@@ -1,4 +1,4 @@
-@inbook{Grohe2014,
+@inproceedings{Grohe2014,
 	author={Grohe, Martin
 	and Kersting, Kristian
 	and Mladenov, Martin
@@ -11,7 +11,7 @@
 	doi={10.1007/978-3-662-44777-2_42}
 }
 
-@inbook{Arvind2015,
+@inproceedings{Arvind2015,
 	author={Arvind, V.
 	and K{\"o}bler, Johannes
 	and Rattan, Gaurav
@@ -36,7 +36,7 @@
 	publisher={AAAI Press}
 }
 
-@article{shervashidze2011weisfeiler,
+@inproceedings{shervashidze2011weisfeiler,
 	author={Shervashidze, Nino 
 	and Schweitzer, Pascal 
 	and Leeuwen, Erik Jan van 
@@ -44,70 +44,70 @@
 	and Borgwardt, Karsten M},
 	title={{Weisfeiler-Lehman Graph Kernels}},
 	year={2011},
-	journal={Journal of Machine Learning Research},
+	booktitle={Journal of Machine Learning Research},
 	pages={2539-2561}
 }
 
-@article{MCKAY201494,
+@inproceedings{MCKAY201494,
 	author = {McKay, Brendan D. 
 	and Piperno, Adolfo},
 	title = {{Practical graph isomorphism, II}},
 	year = {2014},
-	journal = {Journal of Symbolic Computation},
+	booktitle = {Journal of Symbolic Computation},
 	pages = {94-112},
 	doi = {10.1016/j.jsc.2013.09.003},
 	publisher={Elsevier}
 }
 
-@article{Goldreich1991,
+@inproceedings{Goldreich1991,
 	author = {Goldreich, Oded 
 	and Micali, Silvio 
 	and Wigderson, Avi},
 	title = {{Proofs That Yield Nothing but Their Validity or All Languages in NP Have Zero-knowledge Proof Systems}},
 	year = {1991},
-	journal = {J. ACM},
+	booktitle = {Journal of the ACM},
 	pages = {690-728},
 	doi = {10.1145/116825.116852},
 	publisher = {ACM}
 }
 
-@article{CARDON198285,
+@inproceedings{CARDON198285,
 	author = {Cardon, A.
 	and Crochemore, M.},
 	title = {{Partitioning a Graph in $O(|A|log2|V|)$}},
 	year = {1982},
-	journal = {Theoretical Computer Science},
+	booktitle = {Theoretical Computer Science},
 	pages = {85-98},
 	doi = {10.1016/0304-3975(82)90016-0},
 	publisher={Elsevier}
 }
 
-@article{Laszlo1980,
+@inproceedings{Laszlo1980,
 	author = {Babai, László 
 	and Erdős, Paul 
 	and Selkow, Stanley M.},
 	title = {{Random Graph Isomorphism}},
 	year = {1980},
-	journal = {SIAM Journal on Computing},
+	booktitle = {SIAM Journal on Computing},
 	pages = {628-635},
 	doi = {10.1137/0209047},
 	publisher = {Society for Industrial and Applied Mathematics}
 }
 
-@article{johnson1975simple,
+@inproceedings{johnson1975simple,
 	author={Johnson, R. H.},
 	title={{Simple Separable Graphs}},
 	year={1975},
-	journal={Pacific Journal of Mathematics},
+	booktitle={Pacific Journal of Mathematics},
 	pages={143-158},
 	publisher={Mathematical Sciences Publishers}
 }
 
-@article{koren1976pairs,
+@inproceedings{koren1976pairs,
 	author={Koren, Michael},
 	title={{Pairs of Sequences with a Unique Realization by Bipartite Graphs}},
 	year={1976},
-	journal={Journal of Combinatorial Theory, Series B},
+	booktitle={Journal of Combinatorial Theory, Series B},
 	pages={224-234},
 	publisher={Elsevier},
 	doi = {10.1016/S0095-8956(76)80006-8}
