Einfügen von Verbesserungen

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -33,7 +33,7 @@
 \usepackage{algpseudocode}                                  % Pseudocode für Algorithmen
 \usepackage[standard]{ntheorem}                             % Theorem-Umgebung
 \usepackage{mathtools}										% Tools zum Anzeigen von Formeln
-\usepackage[nogroupskip,style=altlist]{glossaries}			% Verwaltung des Glossars
+\usepackage[nogroupskip,style=altlist,nopostdot]{glossaries}% Verwaltung des Glossars
 \usepackage{enumitem}										% Erweiterte Funktionen der enumerate Umgebung
 \usepackage[autostyle=true,german=quotes]{csquotes}			% Wird für den Befehl \enquote benötigt
 \usepackage{tikz}											% Ermöglicht das Zeichnen von Grafiken
@@ -108,7 +108,9 @@ Christopher Morris \\[2ex]
 \textbf{Basierend auf:}\\
 V. Arvind, Johannes Köbler, Gaurav Rattan und Oleg Verbitsky\\
 On the Power of Color Refinement\\
-\url{https://link.springer.com/chapter/10.1007/978-3-319-22177-9_26}
+Veröffentlicht von Springer International Publishing, 2015\\
+In Fundamentals of Computation Theory: 20th International Symposium (S. 339-350)\\
+DOI:10.1007/978-3-319-22177-9\_26
 \end{minipage}
 
 \definecolor{TUGreen}{rgb}{0.517,0.721,0.094}
