--- a/ressources/glossary.tex
+++ b/ressources/glossary.tex
@@ -1,18 +1,18 @@
 %\newglossaryentry{}{name={},description={}}
 %\newacronym[description={}]{label}{kurz}{lang}
-\newglossaryentry{regulaerer_graph}{name={regulärer Graph},description={Ein Graph ist regulär wenn alle seine Knoten den gleichen Grad besitzen}}
-\newglossaryentry{unigraph}{name={Unigraph},description={Die Isomorphieeigenschaften eines Unigraphen sind durch die Sequenz der Knotengrade genau definiert. Dies bedeutet, dass allein anhand der Knotengrade zweier Unigraphen bestimmt werden kann, ob diese isomorph sind}}
-\newglossaryentry{nachbarschaft}{name={Nachbarschaft},description={Die Nachbarschaft $N(u)$ bildet die Menge der Knoten, die adjazent zu $u\in V(G)$ sind},plural={Nachbarschaften}}
-\newglossaryentry{subgraph}{name={Subgraph},description={Der Subgraph $G[X]$ ist ein Teilgraph von $G$, der durch die Knotenmenge $X\subseteq V(G)$ und deren inzidenten Kanten gebildet wird}}
-\newglossaryentry{bipartiter_graph}{name={bipartiter Graph},description={Ein Graph heißt bipartit, wenn sich seine Knoten in zwei Teilmengen aufteilen lassen, sodass Kanten nur zwischen den beiden Mengen aber nicht innerhalb existieren. $G[X,Y]$ ist der bipartite Graph, welcher durch die beiden disjunkten Teilmengen $X,Y\subseteq V(G)$ und allen Kanten, die Knoten aus $X$ und $Y$ verbinden, gebildet wird}}
-\newglossaryentry{disjunkte_vereinigung}{name={disjunkte Vereinigung},description={Die knotendisjunkte Vereinigung von $G$ und $H$ wird $G+H$ genannt. Die disjunkte Vereinigung von $m$ Kopien des Graphen $G$ wird als $mG$ geschrieben}}
-\newglossaryentry{bipartites_komplement}{name={bipartites Komplement},description={Das bipartite Komplement eines Graphen $G$ mit Knotenklassen $X$ und $Y$ stellt der bipartite Graph $G'$ dar, welcher die selben Knotenklassen enthält, allerdings das Komplement der Kanten zwischen den beiden Knotenklassen}}
-\newglossaryentry{biregulaerer_graph}{name={biregulärer Graph},description={Ein bipartiter Graph $G$ mit Knotenklassen $X$ und $Y$ ist biregulär, wenn alle Knoten in $X$ und $Y$ den gleichen Grad besitzen}}
-\newglossaryentry{vollstaendiger_graph}{name={vollständiger Graph},description={In einem vollständigen Graphen $K_n$ mit $n$ Knoten, ist jeder Knoten mit jedem anderen Knoten verbunden und besitzt somit den Grad $n-1$}}
-\newglossaryentry{vollstaendiger_bipartiter_graph}{name={vollständiger bipartiter Graph},description={In einem vollständigen bipartiten Graphen mit den Knotenmengen $X$ und $Y$ sind alle Knoten aus $X$ mit allen Knoten aus $Y$ verbunden. Somit haben alle Knoten aus $X$ den Grad $|Y|$ und alle Knoten aus $Y$ den Grad $|X|$}}
-\newglossaryentry{zyklus}{name={Zyklus},description={Ein geschlossener Pfad eines Graphen über $n$ Knoten wird Zyklus $C_n$ genannt}}
-\newglossaryentry{multimenge}{name={Multimenge},description={Eine Multimenge unterscheidet eine Menge dadurch, dass Elemente mehrfach vorkommen können. Multimengen werden hier durch doppelte geschweifte Klammern ${{}}$ dargestellt},plural={Multimengen}}
-\newglossaryentry{matching_graph}{name={matching Graph},description={Ein matching Graph ist ein Graph, bei dem kein Knoten mehr als eine inzidente Kante besitzt. Somit gibt es nur Zusammenhangskomponenten mit maximal einer Kante und zwei Knoten}}
-\newglossaryentry{hypergraph}{name={Hypergraph},description={Ein Hypergraph ist ein Graph, in dem eine Kante, auch Hyperkante genannt, mehr als zwei Knoten verbinden kann}}
-\newglossaryentry{stern}{name={Stern},description={In einem Sterngraphen $K_{1,t}$ gibt es einen zentralen Knoten, welcher mit allen anderen Knoten des Graphen, $t$ an der Zahl, durch eine Kante verbunden ist. Die anderen Knoten sind untereinander nicht verbunden}}
-\newglossaryentry{disjunkte_vereinigung_von_sternen}{name={disjunkte Vereinigung von Sternen},description={Bei einer \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} von \glslink{stern}{Sternen} $sK_{1,t}$ bezeichnet $s$ die Anzahl der Sterne und $t$ die Anzahl der äußeren Knoten jedes Sterns}}
+\newglossaryentry{regulaerer_graph}{name={Regulärer Graph},description={Ein Graph ist regulär wenn alle seine Knoten den gleichen Grad besitzen}}
+\newglossaryentry{unigraph}{name={Unigraph},description={Der Isomorphietyp eines Unigraphen ist durch die Sequenz seiner Knotengrade genau definiert. Dies bedeutet, dass allein anhand der Knotengrade zweier Unigraphen bestimmt werden kann, ob diese isomorph sind. S. }}
+\newglossaryentry{nachbarschaft}{name={Nachbarschaft},description={Die Nachbarschaft $N(u)$ bildet die Menge der Knoten, die adjazent zu $u\in V(G)$ sind. S. },plural={Nachbarschaften}}
+\newglossaryentry{subgraph}{name={Subgraph},description={Der Subgraph $G[X]$ ist ein Teilgraph von $G$, der durch die Knotenmenge $X\subseteq V(G)$ und deren inzidenten Kanten gebildet wird. S. }}
+\newglossaryentry{bipartiter_graph}{name={Bipartiter Graph},description={Ein Graph heißt bipartit, wenn sich seine Knoten in zwei Teilmengen aufteilen lassen, sodass Kanten nur zwischen den beiden Mengen aber nicht innerhalb existieren. $G[X,Y]$ ist der bipartite Graph, welcher durch die beiden disjunkten Teilmengen $X,Y\subseteq V(G)$ und allen Kanten, die Knoten aus $X$ und $Y$ verbinden, gebildet wird. S. }}
+\newglossaryentry{disjunkte_vereinigung}{name={Disjunkte Vereinigung},description={Die knotendisjunkte Vereinigung von $G$ und $H$ wird $G+H$ genannt. Die disjunkte Vereinigung von $m$ Kopien des Graphen $G$ wird als $mG$ geschrieben. S. }}
+\newglossaryentry{bipartites_komplement}{name={Bipartites Komplement},description={Das bipartite Komplement eines Graphen $G$ mit Knotenklassen $X$ und $Y$ stellt der bipartite Graph $G'$ dar, welcher die selben Knotenklassen wie $G$ enthält, allerdings das Komplement der Kanten zwischen den beiden Knotenklassen. S. }}
+\newglossaryentry{biregulaerer_graph}{name={Biregulärer Graph},description={Ein bipartiter Graph $G$ mit Knotenklassen $X$ und $Y$ ist biregulär, wenn alle Knoten in $X$ und $Y$ den gleichen Grad besitzen. S. }}
+\newglossaryentry{vollstaendiger_graph}{name={Vollständiger Graph},description={In einem vollständigen Graphen $K_n$ mit $n$ Knoten, ist jeder Knoten mit jedem anderen Knoten verbunden und besitzt somit den Grad $n-1$. S. }}
+\newglossaryentry{vollstaendiger_bipartiter_graph}{name={Vollständiger bipartiter Graph},description={In einem vollständigen bipartiten Graphen mit den Knotenmengen $X$ und $Y$ sind alle Knoten aus $X$ mit allen Knoten aus $Y$ verbunden. Somit haben alle Knoten aus $X$ den Grad $|Y|$ und alle Knoten aus $Y$ den Grad $|X|$. S. }}
+\newglossaryentry{zyklus}{name={Kreis},description={Ein geschlossener Pfad eines Graphen über $n$ Knoten wird Kreis oder Zyklus $C_n$ genannt. S. }}
+\newglossaryentry{multimenge}{name={Multimenge},description={Eine Multimenge unterscheidet sich von einer Menge dadurch, dass Elemente mehrfach vorkommen können. Multimengen werden hier durch doppelte geschweifte Klammern $\ldblbrace \rdblbrace$ dargestellt. S. },plural={Multimengen}}
+\newglossaryentry{matching_graph}{name={Matching Graph},description={Ein matching Graph ist ein Graph, bei dem kein Knoten mehr als eine inzidente Kante besitzt. Somit gibt es nur Zusammenhangskomponenten mit maximal einer Kante und zwei Knoten. S. }}
+\newglossaryentry{hypergraph}{name={Hypergraph},description={Ein Hypergraph ist ein Graph, in dem eine Kante, auch Hyperkante genannt, mehr als zwei Knoten verbinden kann. S. }}
+\newglossaryentry{stern}{name={Stern},description={In einem Sterngraphen $K_{1,t}$ gibt es einen zentralen Knoten, welcher mit allen anderen Knoten des Graphen, $t$ an der Zahl, durch eine Kante verbunden ist. Die anderen Knoten sind untereinander nicht verbunden. S. }}
+\newglossaryentry{disjunkte_vereinigung_von_sternen}{name={Disjunkte Vereinigung von Sternen},description={Bei einer \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} von \glslink{stern}{Sternen} $sK_{1,t}$ bezeichnet $s$ die Anzahl der Sterne und $t$ die Anzahl der äußeren Knoten jedes Sterns. S. }}
