--- a/sec/ergebnis.tex
+++ b/sec/ergebnis.tex
@@ -20,10 +20,10 @@ Die vorgestellten lokalen und globalen Eigenschaften von CR-Graphen reichen wie 
 	\end{enumerate}
 \end{Theorem}
 
-\emph{Beweis:} Die Äquivalenz der Aussagen wird gezeigt, indem gezeigt wird, dass gilt: $(a)\rightarrow (b)\rightarrow (c)\rightarrow (a)$.
+\emph{Beweis:} Die Äquivalenz der Aussagen folgt aus dem Beweis davon, dass gilt: $(a)\rightarrow (b)\rightarrow (c)\rightarrow (a)$.
 Die bisher erlangten Erkenntnisse ermöglichen es bereits einen großen Teil dieser Aussage zu bestätigen. Somit wurde in den Lemmata \ref{lemma:lokal} und \ref{lemma:global1} gezeigt, dass $(a)\rightarrow (b)$ gilt. Ebenfalls wurde in Lemma \ref{lemma:global2} gezeigt, dass $(b)\rightarrow (c)$ gilt. Es bleibt also nur noch zu zeigen, dass auch $(c)\rightarrow (a)$ gültig ist.\\
 
-Sei dazu $G$ ein Graph, welcher die Bedingungen \emph{A}, \emph{B}, \emph{G} und \emph{H} erfüllt und $H$ ein durch Color Refinement nicht von $G$ unterscheidbarer Graph, dann ist zu zeigen, dass $G$ und $H$ isomorph sind.
+Sei dazu $G$ ein Graph, welcher die Bedingungen \emph{A}, \emph{B}, \emph{G} und \emph{H} erfüllt und $H$ ein durch Color-Refinement nicht von $G$ unterscheidbarer Graph, dann ist zu zeigen, dass $G$ und $H$ isomorph sind.
 Im Folgenden sei $C^s$ eine Knotenfärbung, welche zur stabilen Partition $\mathcal{P}^s$ von der \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} $G+H$ gehört.
 Aus Gleichung \ref{eq:2} folgt, dass es eine Abbildung $f:\mathcal{P}_G\rightarrow \mathcal{P}_H$ gibt, welche die Zellen der stabilen Partition von $G$ auf die der stabilen Partition von $H$ so abbildet, dass diese die selbe Farbe und Kardinalität besitzen.
 
@@ -120,7 +120,7 @@ Um die Zuordnung zu den Partitionen im Text zu erleichtern wird die von den blau
 			(4) edge node {} (8);
 		\end{scope}
 	\end{tikzpicture}
-	\caption{Zwei nicht isomorphe Graphen, welche vom Color Refinement nicht unterschieden werden können}
+	\caption{Zwei nicht isomorphe Graphen, welche vom Color-Refinement nicht unterschieden werden können}
 	\label{fig:anwendungsbeispiel}
 \end{figure}
 
@@ -221,4 +221,4 @@ Wird diese Breitensuche nun von der Zelle minimaler Kardinalität für jede Komp
 
 Der Breitensuchealgorithmus benötigt eine Laufzeit von $\mathcal{O}(n+m)$, da der Zellgraph maximal $n$ Knoten und maximal $m$ Kanten besitzt.
 
-Es ist somit zu erkennen, dass das Errechnen der stabilen Partition, auf der die ganzen Operationen ausgeführt werden mit $\mathcal{O}((n+m)\log n)$ die dominierende Laufzeit des Algorithmus ist.$\hfill\square$
+Es ist somit zu erkennen, dass das Errechnen der stabilen Partition, auf der die ganzen Operationen ausgeführt werden, mit $\mathcal{O}((n+m)\log n)$ die dominierende Laufzeit des Algorithmus ist.$\hfill\square$
